Criação de categorias (integração) finalizada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://pagueibarato-server.postgres.database.azure.com:5432/pagueibarato_db
+spring.datasource.url=jdbc:postgresql://pagueibarato-database.postgres.database.azure.com:5432/pagueibarato_dbtest
 spring.datasource.username=pagueibaratoadmin
-spring.datasource.password=Milu!08220010
+spring.datasource.password=GestaoTestes2023!
 
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.maxLifetime=54000
@@ -14,8 +14,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 server.error.include-stacktrace=never
 server.error.include-timestamp=never
 
-pagueibarato.config.salt.start=Milu123@@
-pagueibarato.config.salt.end=!!321Pinguim
+pagueibarato.config.salt.start=Gestao2023
+pagueibarato.config.salt.end=2023Qualidade
 
 pagueibarato.config.token.expiration=2592000000
-pagueibarato.config.token.secret.key=PagueiBaratoSecretKey
+pagueibarato.config.token.secret.key=GestaoQualidadeSoftware
